checker/tests/nullness-extra/issue594/Expected.txt
Issue594.java:17: error: [return.type.incompatible] incompatible types in return.
        return result;
               ^
  type of expression: T[ extends @Nullable Object super @Nullable Void]
  method return type: T[ extends @Nullable Object super @NonNull Void]
1 error
